[package]
name = "forward"
version = "0.1.0"
edition = "2021"
authors = ["touka shiro / max3584 <max3584.work@gmail.com>"]
description = "Platform independent asynchronous UDP/TCP proxy"
homepage = "https://github.com/glacierx/rproxy"
repository = "https://github.com/glacierx/rproxy"
readme = "README.md"
keywords = ["proxy", "TCP", "UDP", "async","openvpn"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT"
exclude = [
    ".gitignore",
    "Cargo.toml.orig",
    "Cargo.lock",
]

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
log = "0.4.22"
env_logger = "0.11.5"
chrono = "0.4.38"
async-trait = "0.1.81"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "mysql"] }
serde = "1.0.207"
serde_json = "1.0.124"
argh = "0.1.12"
futures-util = "0.3.30"
futures = "0.3.30"